[package]
name = "hetseq"
version = "0.1.3"
authors = ["omni-viral"]
description = "Defines traits and types to work with heterogenous sequences"
license = "Apache-2.0/MIT"
repository = "https://github.com/omni-viral/hetseq"

[dependencies.rayon]
version = "1.0"
optional = true

[features]
nightly = []
par_iter = ["rayon"]
